--- a/css/index.css
+++ b/css/index.css
@@ -15,14 +15,10 @@ body{
 
 }
 
-
-/**a{
-	color: #999999;
-}
-a:hover{
-	color: #dddddd;
-}
-**/
+<<< css-changes
+a {
+<<< HEAD
+	color: #000;
 
 #intro_container, #outro_container{
 	width:100%; height:550px;
